<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OperationsActivity">

    		<TextView
        		android:id="@+id/statusTextView"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"        		
        		android:text="statusTextView"
        		tools:ignore="HardcodedText" />

    		<TextView
        		android:id="@+id/connectionErrorTextView"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"      
        		android:layout_toRightOf="@+id/swButton"
        		android:layout_marginLeft="5dp"
        		android:text="statusTextView"
        		tools:ignore="connectionErrorTextView" />

	        <Spinner
    		    android:id="@+id/spinnerGTselection"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_alignBottom="@+id/dllButton"
    		    android:layout_alignLeft="@+id/disconnectButton"
    		    android:layout_alignRight="@+id/shutdownButton"
    		    android:layout_alignTop="@+id/dllButton"
    		    android:entries="@array/GtSelectionStringArray" />

    		<Button
    		    android:id="@+id/paymentButton"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_alignRight="@+id/spinnerGTselection"
    		    android:layout_below="@+id/spinnerGTselection"
    		    android:text="@string/payment" />

	<TextView
		android:id="@+id/resultTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/totalsButton"
		android:layout_marginTop="11dp"
		android:text="resultTextView"
		tools:ignore="HardcodedText" />

	<TextView
		android:id="@+id/transactionResultTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/resultTextView"
		android:layout_marginTop="19dp"
		android:text="transactionResultTextView"
		tools:ignore="HardcodedText" />

    		<ScrollView
    		    android:id="@+id/receiptScrollView"
				android:layout_width="fill_parent"
    		    android:layout_height="wrap_content"
    		    android:layout_marginTop="10dp"
    		    android:layout_below="@+id/transactionResultTextView"
				android:fillViewport="true"
                android:layout_alignParentBottom="true">
				<TextView
					android:id="@+id/receiptTextView"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
                    android:text="receiptTextView"/>
			</ScrollView>

    		<ImageView
    		    android:id="@+id/imageView1"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_alignBottom="@+id/closeSessionButton"
    		    android:layout_alignRight="@+id/paymentButton"
    		    android:src="@drawable/pax_logo" />

    		<TextView
    		    android:id="@+id/euroSymbol"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_alignBaseline="@+id/paymentButton"
    		    android:layout_alignBottom="@+id/paymentButton"
    		    android:layout_toLeftOf="@+id/paymentButton"
    		    android:text="@string/EUR" />

	<Button
		android:id="@+id/dllButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/menuButton"
		android:text="@string/dll" />

    <Button
		android:id="@+id/shutdownButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:text="@string/shutdown"
        android:layout_alignBaseline="@+id/disconnectButton"
        android:layout_alignBottom="@+id/disconnectButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/disconnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        android:layout_alignBaseline="@+id/swButton"
        android:layout_alignBottom="@+id/swButton"
        android:layout_toRightOf="@+id/swButton"
        android:layout_marginLeft="5dp"  />

    <Button
        android:id="@+id/swButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sw"
        android:layout_alignBaseline="@+id/menuButton"
        android:layout_alignBottom="@+id/menuButton"
        android:layout_toRightOf="@+id/menuButton"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/statusTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/closeSessionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closeSession"
		android:layout_below="@+id/preAuthorizationButton"
		android:layout_alignRight="@+id/dllButton"
		android:layout_alignEnd="@+id/dllButton" />

    <Button
        android:id="@+id/reversalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reversal"
		android:layout_below="@+id/editAmount"
		android:layout_toRightOf="@+id/statusTextView"
		android:layout_toEndOf="@+id/statusTextView" />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_alignBottom="@+id/euroSymbol"
        android:layout_alignLeft="@+id/dllButton"
        android:layout_alignStart="@+id/dllButton" />

	<Button
		android:id="@+id/preAuthorizationButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/editAmount"
		android:text="PREAUTH" />

	<EditText
		android:id="@+id/editAuthCode"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:ems="10"
		android:inputType="number"
		android:visibility="visible"
		android:layout_below="@+id/check_Closure"
		android:layout_toRightOf="@+id/editAmount"
		android:layout_toEndOf="@+id/editAmount" />

	<CheckBox
		android:id="@+id/checkInt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/reversalButton"
		android:layout_alignStart="@+id/reversalButton"
		android:layout_below="@+id/reversalButton"
		android:text="Integrative" />

	<CheckBox
		android:id="@+id/check_Closure"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Closure"
		android:layout_below="@+id/checkInt"
		android:layout_alignLeft="@+id/checkInt"
		android:layout_alignStart="@+id/checkInt" />

	<Button
		android:id="@+id/totalsButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Tot"
		android:layout_below="@+id/check_Closure"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_marginTop="11dp" />

	<Button
		android:id="@+id/refundButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Refund"
		android:layout_alignBaseline="@+id/spinnerGTselection"
		android:layout_alignBottom="@+id/spinnerGTselection"
		android:layout_alignLeft="@+id/swButton"
		android:layout_alignStart="@+id/swButton" />

	<Button
		android:id="@+id/customCardReadingButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="swc"
		android:layout_below="@+id/check_Closure"
		android:layout_alignRight="@+id/reversalButton"
		android:layout_marginTop="11dp" />

	<Button
		android:id="@+id/rebootButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="RB"
		android:layout_below="@+id/editAuthCode"
		android:layout_alignLeft="@+id/imageView1"
		android:layout_alignStart="@+id/imageView1" />

    <Button
        android:id="@+id/imgShowbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editAuthCode"
        android:layout_toEndOf="@+id/rebootButton"
        android:layout_toRightOf="@+id/rebootButton"
        android:text="IMG" />

	<CheckBox
		android:id="@+id/checkBox_BillPayment"
		android:layout_width="132dp"
		android:layout_height="52dp"
		android:layout_below="@+id/imgShowbutton"
		android:layout_alignParentStart="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentBottom="true"
		android:layout_marginStart="236dp"
		android:layout_marginTop="0dp"
		android:layout_marginEnd="0dp"
		android:layout_marginBottom="80dp"
		android:onClick="onCheckboxClicked"
		android:text="Bill Payment" />

</RelativeLayout>
